Revision history for Dist::Zilla::Plugin::VersionFromPrev

{{$NEXT}}

0.04 2010-05-01 21:27:09

    - Re-release due to Makefile.PL breakage caused by Dist::Zilla
      FAIL: http://github.com/rjbs/dist-zilla/commit/2e47b6c205

0.03 2010-04-20 16:29:57

    - Don't bump the version if DONT_BUMP_VERSION=1 is set.

    - Support BUMP_VERSION_TO=* to bump to any given version.

0.02 2010-03-12 20:13:33

    - This module is now part of @AVAR, so don't use it in dist.ini

0.01 2010-03-12 20:05:09

    - Initial CPAN release